# slope-stability-analysis

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  render_jupyter.yaml  requirements.txt
slope_stability/: __init__.py  calculate_slice_forces.py  calculator.py  compute_slice_properties.py  geometry.py  my_script.py  stability.py  visualization.py
static/: style.css
static/css/: style.css
templates/: code_view.html  index.html  input.html  results.html
