[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slope-stability-analysis"
version = "0.1.0"
description = "A web application for slope stability analysis"
authors = [
    {name = "jgallardom", email = "jgallardom@live.com"}
]
requires-python = ">=3.11.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "flask==2.2.3",
    "werkzeug==2.2.3",
    "gunicorn==21.2.0",
    "numpy==1.25.2",
    "matplotlib==3.5.3",
    "pillow==9.5.0",
    "cycler==0.11.0",
    "kiwisolver==1.4.4",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "six==1.16.0"
]

[project.urls]
Repository = "https://github.com/jgallardom/slope-stability-analysis.git"

[tool.setuptools]
packages = ["slope_stability"] 